# clion-project-stub

./: .gitignore  CMakeLists.txt
tests/: testTest.cpp
